Fix off-center field text
This was because padding also got applied to wrapped content. Moved
field's internal padding to only direct children, so no extra padding
gets applied.

--- a/css/cyberpunk.css
+++ b/css/cyberpunk.css
@@ -146,12 +146,14 @@ details[open] summary ~ * {
   border-style: solid;
   border-color: black;
 }
+.cyberpunk .field > * {
+  padding: 2px 3px 2px 0px;
+}
 .cyberpunk .field > *, .cyberpunk .field > span > *, .cyberpunk .field > div > * {
   background-color: black;
   color: whitesmoke;
   font-weight: bold;
   font-variant: small-caps;
-  padding: 2px 3px 2px 0px;
 }
 .cyberpunk .field .field-image {
   background-position: center;
